--- a/index.html
+++ b/index.html
@@ -3,64 +3,71 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
- 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+    <script>console.log(hannah) </script>
     <title>this was literally the hardest thing ive ever done</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="mystyle.css" />
-
+    <link rel="stylesheet" href="mystyle.css" type="text/css"/>
   </head>
   <body>
+    <div class="flex-container17">
+        <div>Hannah</a></div>
+    </div>      
+    <div class="flex-container18">
+        <div>Cannizzo</a></div>
+    </div>  
+           
   
     <div class="flex-container">
-  <div><a href="">1</a></div>
+  <div><a href="index1.html">1</a></div>
 </div>  
     <div class="flex-container2">
-  <div><a href="">2</a></div>
+  <div><a href="index2.html">2</a></div>
 </div> 
       <div class="flex-container3">
-  <div><a href="">3</a></div>
+  <div><a href="index3.html">3</a></div>
 </div>
     <div class="flex-container4">
-  <div><a href="">4</a></div>
+  <div><a href="index4.html">4</a></div>
 </div> 
     <div class="flex-container5">
-  <div><a href="">5</a></div>
+  <div><a href="index5.html">5</a></div>
 </div> 
         <div class="flex-container6">
-  <div><a href="">6</a></div>
+  <div><a href="index6.html">6</a></div>
 </div> 
         <div class="flex-container7">
-  <div><a href="">7</a></div>
+  <div><a href="index7.html">7</a></div>
 </div> 
         <div class="flex-container8">
-  <div><a href="">8</a></div>
+  <div><a href="index8.html">8</a></div>
 </div> 
         <div class="flex-container9">
-  <div><a href="">9</a></div>
+  <div><a href="index9.html">9</a></div>
 </div> 
         <div class="flex-container10">
-  <div><a href="">10</a></div>
+  <div><a href="index10.html">10</a></div>
 </div> 
         <div class="flex-container11">
-  <div><a href="">11</a></div>
+  <div><a href="index11.html">11</a></div>
 </div> 
         <div class="flex-container12">
-  <div><a href="">12</a></div>
+  <div><a href="index12.html">12</a></div>
 </div> 
         <div class="flex-container13">
-  <div><a href="">13</a></div>
+  <div><a href="index13.html">13</a></div>
 </div> 
         <div class="flex-container14">
-  <div><a href="">14</a></div>
+  <div><a href="index14.html">14</a></div>
 </div> 
         <div class="flex-container15">
-  <div><a href="">15</a></div>
+  <div><a href="index15.html">15</a></div>
 </div> 
         <div class="flex-container16">
-  <div><a href="">16</a></div>
+  <div><a href="index16.html">16</a></div>
 </div> 
-   
-       
   </body>
 </html>
