--- a/index11.html
+++ b/index11.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
  <!-- import the webpage's stylesheet -->
- <link rel="stylesheet" href="mystyle2.css" type="text/css"/>
+ <link rel="stylesheet" href="mystyle11.css" type="text/css"/>
  <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
@@ -14,16 +14,19 @@
   </head>
   <body>
     <div class="flex-container">
-      <div><a href="index.html">2</div>
+      <div><a href="index.html"class="class1">11</a></div>
     </div>   
    
     <div class="flex-container1">
-      <div></a>How are you feeling about learning to code in this class? Nervous? Excited?</div>
-    </div>  
-   
-    <div class="flex-container2">
-      <div>Excited to understand and be able to put together everything i learned last semester.</div>
-    </div>  
-   
-</body>
-</html>
+      <div>Create a list with the names of 5 musical artists that you like to listen to.
+      </div>
+    </div> 
+    <ul>
+        <li><a class="Indie-Folk">The Mountain Goats</a></li>
+        <li><a class="Hip-Hop">Childish Gambino</a></li>
+        <li><a class="Blues">Hozier</a></li>
+        <li><a class="Indie-Rock">Florence and the Machine</a></li>
+        <li><a class="Indie-Folk">The Crane Wives</a></li>
+      </ul>
+    </body>
+    </html>
