--- a/index14.html
+++ b/index14.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
  <!-- import the webpage's stylesheet -->
- <link rel="stylesheet" href="mystyle2.css" type="text/css"/>
+ <link rel="stylesheet" href="mystyle14.css" type="text/css"/>
  <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
@@ -14,16 +14,14 @@
   </head>
   <body>
     <div class="flex-container">
-      <div><a href="index.html">2</div>
+      <div><a href="index.html"class="class1">14</a></div>
     </div>   
    
     <div class="flex-container1">
-      <div></a>How are you feeling about learning to code in this class? Nervous? Excited?</div>
-    </div>  
+      <div>
+      </div>Can you figure out how a gradient is defined in CSS?</div> 
    
-    <div class="flex-container2">
-      <div>Excited to understand and be able to put together everything i learned last semester.</div>
-    </div>  
-   
+    <div class="my-box" style="height: 500px; width: 500px; border: 1px solid"></div>
+
 </body>
 </html>
