--- a/index15.html
+++ b/index15.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
  <!-- import the webpage's stylesheet -->
- <link rel="stylesheet" href="mystyle2.css" type="text/css"/>
+ <link rel="stylesheet" href="mystyle15.css" type="text/css"/>
  <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
@@ -14,15 +14,16 @@
   </head>
   <body>
     <div class="flex-container">
-      <div><a href="index.html">2</div>
+      <div><a href="index.html">15</div>
     </div>   
    
     <div class="flex-container1">
-      <div></a>How are you feeling about learning to code in this class? Nervous? Excited?</div>
+      <div></a>Describe in words how you would like to style this homepage to reflect your personal design sensibilities.</div>
     </div>  
    
     <div class="flex-container2">
-      <div>Excited to understand and be able to put together everything i learned last semester.</div>
+      <div>I wanted to make it bright and modern and feel as cool as possible.
+    </div>
     </div>  
    
 </body>
