--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
  <!-- import the webpage's stylesheet -->
- <link rel="stylesheet" href="mystyle2.css" type="text/css"/>
+ <link rel="stylesheet" href="mystyle3.css" type="text/css"/>
  <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
@@ -14,15 +14,15 @@
   </head>
   <body>
     <div class="flex-container">
-      <div><a href="index.html">2</div>
+      <div><a href="index.html">3</div>
     </div>   
    
     <div class="flex-container1">
-      <div></a>How are you feeling about learning to code in this class? Nervous? Excited?</div>
+      <div>How do you imagine coding fitting in with the rest of your design curriculum and career after college?</div>
     </div>  
    
     <div class="flex-container2">
-      <div>Excited to understand and be able to put together everything i learned last semester.</div>
+      <div>I want to ultimately end up in video game design, so being able to code is central to that.</div>
     </div>  
    
 </body>
