--- a/index4.html
+++ b/index4.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
  <!-- import the webpage's stylesheet -->
- <link rel="stylesheet" href="mystyle2.css" type="text/css"/>
+ <link rel="stylesheet" href="mystyle4.css" type="text/css"/>
  <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
@@ -14,16 +14,17 @@
   </head>
   <body>
     <div class="flex-container">
-      <div><a href="index.html">2</div>
+      <div><a href="index.html">4</a></div>
     </div>   
    
     <div class="flex-container1">
-      <div></a>How are you feeling about learning to code in this class? Nervous? Excited?</div>
+      <div>Describe the relationship between HTML, CSS, and Javascript. Which one(s) are required to create a webpage?
+      </div>
     </div>  
    
     <div class="flex-container2">
-      <div>Excited to understand and be able to put together everything i learned last semester.</div>
+      <div>HTML is like the base of everything, CSS makes everything look nice, and Javascript makes websites interactive. HTML is required to make a website, but the other two are required to make a website run.</div>
     </div>  
-   
 </body>
 </html>
+    
