--- a/index6.html
+++ b/index6.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
  <!-- import the webpage's stylesheet -->
- <link rel="stylesheet" href="mystyle2.css" type="text/css"/>
+ <link rel="stylesheet" href="mystyle6.css" type="text/css"/>
  <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
@@ -14,16 +14,37 @@
   </head>
   <body>
     <div class="flex-container">
-      <div><a href="index.html">2</div>
+      <div><a href="index.html">6</a></div>
     </div>   
    
     <div class="flex-container1">
-      <div></a>How are you feeling about learning to code in this class? Nervous? Excited?</div>
-    </div>  
-   
-    <div class="flex-container2">
-      <div>Excited to understand and be able to put together everything i learned last semester.</div>
-    </div>  
-   
+      <div>List your favorite foods in order of preference.
+      </div>
+    </div> 
+
+<h1>
+  salmon sushi  
+</h1>
+
+
+<h2>
+dunkin iced coffee (caramel)
+</h2>
+
+<h3>
+latkes    
+</h3>
+
+<h4>
+ceviche
+</h4>
+
+<h5>
+grilled cheese and creamy tomato soup
+</h5>
+
+<h6>
+cobb salad
+</h6>
 </body>
 </html>
